	  notably FreeBSD; if your Backspace key acts like Delete, this
	  option will fix that. (DLR)
	- Remove unneeded breaks at the ends of default: clauses. (DLR)
	- Add the ability to repeat the last search without prompting
	  via Meta-W, and move the line wrapping toggle to Meta-L.  New
	  function do_research(). (Wouter van Hemel)
- files.c:
  do_browser()
	- Some of the Pico compatibility options in the file browser
	  that don't work properly for current Pico have been removed.
	  Backspace, 'g', 'l', 'q', and 'u' are invalid.  'd' deletes
	  the highlighted file, and 'r' renames the highlighted file;
	  neither of these are implemented. (DLR)
- global.c:
  toggle_init()
	- Change the message for the line wrapping toggle from "Auto
	  wrap" to "Auto line wrap", to more clearly associate it with
	  Meta-L. (DLR)
  shortcut_init()
	- Change multibuffer-enabled references to
	  opening/closing/toggling the previous/next loaded file to
	  toggling/switching to/closing the previous/next file buffer,
	  for consistency with other references. (DLR)
- nano.c:
  window_init()
	- Set keypad() to TRUE regardless of whether PDCurses is being
	  used, as Meta-X apparently turns it off even under ncurses.
	  (DLR)
  help_init()
	- Document the support for Esc Esc [character]'s being
	  interpreted as Ctrl-[character], and the support for Pico's
	  Esc Esc [three-digit decimal ASCII code] input method. (DLR)
- nano.h:
	- Define KEY_SUSPEND as -1 when slang is used, as slang has no
	  KEY_SUSPEND equivalent.  When nano is compiled with slang
	  support, pressing Ctrl-Z to suspend nano at the Linux console
	  with keypad(TRUE) generates Ctrl-Z instead of KEY_SUSPEND
	  (which is what ncurses generates then). (DLR)
- winio.c:
  titlebar()
	- Fix problem with the available space for a filename on the
	  titlebar's being short by one. (DLR)
  do_credits()
	- Update the copyright years to "1999-2003", to match those
	  given in the rest of the code. (DLR)