@@ -3,7 +3,7 @@ TODO file (? means the feature may be implemented, but not definitely)
 
 For version 1.4:
 - UTF-8 support.
-- Support for Pico's paragraph searching ability.
+- Support for Pico's paragraph searching ability. [DONE]
 - Undo/Redo key?
 - Rebindable keys?
 - Keystroke to implement "Add next sequence as raw" like vi's ^V.
