@@ -389,6 +389,8 @@ know what you're doing */
 #define NANO_EXTCMD_KEY		NANO_CONTROL_X
 #define NANO_NEXTWORD_KEY	NANO_CONTROL_SPACE
 #define NANO_PREVWORD_KEY	NANO_ALT_SPACE
+#define NANO_PARABEGIN_KEY	NANO_CONTROL_W
+#define NANO_PARAEND_KEY	NANO_CONTROL_O
 
 #ifndef NANO_SMALL
 /* Toggles do not exist with NANO_SMALL. */
